# Prog-RayTracer

./: .gitignore  CMakeLists.txt  README.md  RayTracerUML.drawio  op_features.txt
art/: RayTracerUML.drawio  Schriftliche-Aufgaben.docx  op_features.txt
framework/: Box.cpp  Box.h  HitPoint.hpp  Material.cpp  Material.hpp  Ray.h  Shape.cpp  Shape.h  Shape.hpp  Sphere.cpp  Sphere.h  Sphere.hpp  ambientLight.hpp  box.cpp  box.hpp  camera.hpp  color.hpp  composite.cpp  composite.hpp  hitPoint.hpp  light.hpp  material.cpp  material.hpp  pixel.hpp  pointLight.hpp  printVec3.cpp  printVec3.hpp  ray.cpp  ray.hpp  render.cpp  render.hpp  renderer.cpp  renderer.hpp  scene.cpp  scene.hpp  shape.cpp  shape.hpp  sphere.cpp  sphere.hpp  triangle.cpp  (+3 more)
misc/: example.sdf
movie/: ffmpeg-commands.txt
moviemaker/: animation.cpp  animation.h  bodypart.cpp  bodypart.h  moviemaker.cpp  movierenderer.cpp
sdf/: colored-buster.mtl  cornell.sdf  example.sdf  superhot.mtl  sword.mtl
source/: CMakeLists.txt  example.cpp  octree_tests.cpp  raytracer.cpp  tests.cpp
